--- a/angular_learning/src/app/app.component.html
+++ b/angular_learning/src/app/app.component.html
@@ -9,7 +9,7 @@
       <app-items-input *ngFor="let taskElement of taskElements"
       [taskElement]="taskElement"></app-items-input>
       <button
-      class="btn btn-danger" (click)="onDestroy()">Clear</button>
+      class="btn btn-danger" (click)="onDestroy()">Hapus</button>
     </div>
     
   </div>
