--- a/angular_learning/src/app/items/items.component.html
+++ b/angular_learning/src/app/items/items.component.html
@@ -1,17 +1,17 @@
 <div class="row">
     <div class="col-xs-12">
-      <h3>Add Task (individual/group)</h3>
+      <h3>Tambah Tugas (individu/grup)</h3>
       <hr>
-      <label>Task Name</label>
+      <label>Nama Tugas</label>
       <input type="text" class="form-control" [(ngModel)]="newTaskName">
-      <label>Task Description</label>
+      <label>Deskripsi</label>
       <input type="text" class="form-control" [(ngModel)]="newTaskContent">
       <br>
       <button
         class="btn btn-primary"
-        (click)="onAddTask()">Add Individual Task</button>
+        (click)="onAddTask()">Tambah Individu</button>
       <button
         class="btn btn-primary"
-        (click)="onAddGroupTask()">Add Group Task</button>
+        (click)="onAddGroupTask()">Tambah Grup</button>
     </div>
   </div>
