--- a/angular_learning/src/app/items-input/items-input.component.html
+++ b/angular_learning/src/app/items-input/items-input.component.html
@@ -1,6 +1,6 @@
 <div class="card">
 <div class="card-header" *ngIf="element.type === 'individual'">{{ element.name }}</div>
-<div class="card-header" *ngIf="element.type === 'group'">{{ element.name }} <em style="color: red;">(Group)</em></div>
+<div class="card-header" *ngIf="element.type === 'group'">{{ element.name }} <em style="color: rgb(9, 255, 0);">(Grup)</em></div>
 <div class="card-body">
   <strong>{{ element.content }}</strong>
   
