--- a/angular_learning/src/app/item-cards/item-cards.component.html
+++ b/angular_learning/src/app/item-cards/item-cards.component.html
@@ -3,13 +3,25 @@
     <h3>{{ items.itemName }}</h3>
   </div>
   <div class="panel-body">
-    <p class="card-text" *ngIf="status === 'Baik'" style="color: white; background-color: green">
+    <p
+      class="card-text"
+      *ngIf="status === 'Perfect'"
+      style="font-weight: bold; color: white; background-color: green"
+    >
       {{ items.itemStatus }}
     </p>
-    <p class="card-text" *ngIf="status === 'Rusak Ringan'" style="color: black; background-color: yellow">
+    <p
+      class="card-text"
+      *ngIf="status === 'Good'"
+      style="font-weight: bold; color: white; background-color: yellowgreen"
+    >
       {{ status }}
     </p>
-    <p class="card-text" *ngIf="status === 'Rusak Berat'" style="color: white; background-color: red">
+    <p
+      class="card-text"
+      *ngIf="status === 'Broken'"
+      style="font-style: italic; color: black; background-color: red"
+    >
       {{ status }}
     </p>
     <ng-content></ng-content>
